# amazing_fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run.py
.cloudbuild/: cloudbuild.yaml
app/: dependencies.py  log_config.json  main.py
app/core/: __init__.py  env_config.py  exceptions.py  logger.py  validation.py
app/middleware/: debug_middleware.py
app/middlewares/: __init__.py  debug_middleware.py  request_id_middleware.py
app/models/: __init__.py
app/repository/: base_repository.py
app/routers/: healthcheck.py
app/routers/v1/: v1_router.py
app/views/: __init__.py  error_response.py  ready_response.py
docs/adr/: adr_template.md
tests/: test_healthcheck.py
